# cc-sentiment

./: .gitignore  .mcp.json  AGENTS.md  AGENTS.src.md  CLAUDE.md  README.md
.claude/: settings.json
client/: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  MANIFEST.in  README.md  cli.py  memory.py  models.py  pipeline.py  pyproject.toml  sentiment.py  setup.cfg  signing.py  transcripts.py  upload.py
client/cc_sentiment/: _transcripts_rs.pyi  benchmark.py  cli.py  daemon.py  debug.py  debug_log.py  doctor.py  engines.py  hardware.py  headless.py  highlight.py  labeled_data.py  lexicon.py  model_cache.py  models.py  nlp.py  observability.py  pipeline.py  profiling.py  repo.py  sentiment.py  signing.py  text.py  transcripts.py  tui.py  updater.py  upload.py
client/cc_sentiment/adapter/: __init__.py  adapter_config.json  metadata.json
client/cc_sentiment/engines/: __init__.py  base.py  claude_cli.py  factory.py  filter.py  filtered_engine.py  imperative_filter.py  omlx.py  positive_clamp_filter.py  protocol.py  score_filter.py  session_resume_filter.py
client/cc_sentiment/models/: __init__.py  bucket.py  config.py  daemon.py  record.py  share.py  stats.py  transcript.py
client/cc_sentiment/onboarding/: __init__.py  capabilities.py  discovery.py  events.py  machine.py  persistence.py  state.py
client/cc_sentiment/onboarding/ui/: __init__.py  screen.py  state.py
client/cc_sentiment/onboarding/ui/screens/: __init__.py  blocked.py  done.py  email.py  gh_add.py  gist_trouble.py  inbox.py  initial.py  key_pick.py  publish.py  saved_retry.py  ssh_method.py  user_form.py  verify_trouble.py  welcome.py  working.py
client/cc_sentiment/patches/: __init__.py  pr999.patch
client/cc_sentiment/signing/: __init__.py  backends.py  discovery.py  signer.py
client/cc_sentiment/transcripts/: __init__.py  adapter.py  backend.py  bucketer.py  filterspec.py  parser.py  rust.py
client/cc_sentiment/tui/: __init__.py  app.py  boot_view.py  format.py  moments_view.py  progress.py  setup_helpers.py  setup_state.py  stages.py  status.py  system.py  view.py  widgets.py
client/cc_sentiment/tui/dashboard/: __init__.py  actions.py  flow.py  format.py  layout.py  lifecycle.py  moments_view.py  presenter.py  progress.py  screen.py  view.py
client/cc_sentiment/tui/dashboard/popovers/: __init__.py  booting.py  stat_share.py
client/cc_sentiment/tui/dashboard/widgets/: __init__.py  debug_section.py  hourly_chart.py  progress_row.py  sentiment_panel.py
client/cc_sentiment/tui/legacy/: __init__.py  setup_helpers.py  setup_state.py
client/cc_sentiment/tui/legacy/setup/: __init__.py  alternate.py  blocked.py  copy.py  done.py  pending.py  publish.py  resume.py  screen.py  trouble.py  verify.py  welcome.py  working.py
client/cc_sentiment/tui/legacy/widgets/: __init__.py  done_branch.py  step_header.py
client/cc_sentiment/tui/onboarding/: runner.py
client/cc_sentiment/tui/onboarding/widgets/: __init__.py  fallback_panel.py  key_card.py  key_preview.py  publish_actions.py  username_row.py  watcher_row.py
client/cc_sentiment/tui/popovers/: __init__.py  cost_review.py  platform_error.py
client/cc_sentiment/tui/screens/: __init__.py  booting.py  cost_review.py  daemon_prompt.py  dialog.py  platform_error.py  setup.py  stat_share.py
client/cc_sentiment/tui/screens/setup/: __init__.py  alternate.py  blocked.py  done.py  pending.py  publish.py  resume.py  screen.py  trouble.py  verify.py  welcome.py  working.py
client/cc_sentiment/tui/widgets/: __init__.py  body.py  button_row.py  card.py  card_screen.py  command_box.py  debug_section.py  done_branch.py  hourly_chart.py  key_preview.py  link_row.py  live_fun.py  muted_line.py  pending_status.py  progress_row.py  score_bar.py  section.py  sentiment_panel.py  spinner_line.py  stat_card.py  status_line.py  step_actions.py  step_body.py  step_header.py  title.py
client/crates/transcripts/: Cargo.toml
client/crates/transcripts/src/: lib.rs
client/patches/: __init__.py
client/scripts/: benchmark_parse.py  compress_adapter.py
client/tests/: conftest.py  helpers.py  test_adapter.py  test_app_authenticate.py  test_app_idle.py  test_app_lifecycle.py  test_app_progress.py  test_card_fetcher.py  test_cli.py  test_debug.py  test_engines.py  test_format.py  test_hardware.py  test_highlight.py  test_lexicon.py  test_migration_parity.py  test_model_cache.py  test_models.py  test_observability.py  test_onboarding_capabilities.py  test_onboarding_diagram.py  test_onboarding_machine.py  test_onboarding_runner.py  test_onboarding_ui.py  test_pipeline.py  test_screen_cost_review.py  test_screen_platform_error.py  test_screen_stat_share.py  test_sentiment.py  test_setup_flow.py  test_signing.py  test_transcripts.py  test_tui.py  test_upload.py  test_upload_worker.py  test_widget_cta.py  test_widget_hourly_chart.py  test_widget_moments_view.py  test_widget_onboarding.py  test_widget_sentiment_panel.py
client/tests/fixtures/: adapter_bf16_sample.safetensors  adapter_f32_sample.safetensors  frozen_eval_v2_smoke.jsonl  sample_transcript.jsonl  two_gpg_keys.asc
client/tests/onboarding_screens/: conftest.py  test_blocked.py  test_done.py  test_email.py  test_forbidden_terms.py  test_gh_add.py  test_gist_trouble.py  test_inbox.py  test_initial.py  test_key_pick.py  test_publish.py  test_saved_retry.py  test_ssh_method.py  test_user_form.py  test_verify_trouble.py  test_welcome.py  test_working.py
client/tests/tuistory/: conftest.py  driver.py  fake_bin.py  harness.py  runtime_log.py  scenario.py  stubs.py  test_harness.py
client/tests/tuistory/_fixtures/fake-bin/: gh  gpg
client/tests/tuistory/setup/: test_happy_path.py  test_invariants.py  test_link_paths.py  test_manual_and_pending.py  test_nav_keyboard.py  test_resilience.py
client/tests/tuistory/setup/__snapshots__/back-nav-no-dup/: 01-discovery-first_80x24.txt
server/: AGENTS.md  app.py  db.py  models.py  pyproject.toml  verify.py
server/cc_sentiment_server/: admin.py  app.py  db.py  models.py  utils.py  verify.py
server/tests/: conftest.py  test_app.py  test_db.py  test_verify.py
(+133 files in other folders)
