[project]
name = "cc-sentiment"
version = "0.1.0"
description = "Local Claude Code session scorer that contributes metrics to sentiments.cc"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Yasyf Mohamedali", email = "yasyfm@gmail.com" }]
keywords = ["claude-code", "sentiment", "mlx", "apple-silicon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.7",
    "anyio>=4.4",
    "rich>=13.0",
    "tenacity>=8.0",
    "orjson>=3.10",
    "textual>=3.0",
    "python-gnupg>=0.5.4",
    "spacy>=3.8",
    "afinn>=0.1",
]

[project.optional-dependencies]
mlx = ["mlx-lm>=0.20"]

[project.scripts]
cc-sentiment = "cc_sentiment.cli:main"

[project.urls]
Homepage = "https://sentiments.cc"
Repository = "https://github.com/yasyf/cc-sentiment"
Issues = "https://github.com/yasyf/cc-sentiment/issues"

[build-system]
requires = ["setuptools>=68", "setuptools-rust>=1.10"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cc_sentiment*"]

[tool.setuptools.package-data]
cc_sentiment = ["*.pyi", "py.typed"]
"cc_sentiment.patches" = ["*.patch"]

[[tool.setuptools-rust.ext-modules]]
target = "cc_sentiment._transcripts_rs"
path = "crates/transcripts/Cargo.toml"
optional = true
debug = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.cibuildwheel]
build = "cp313-*"
skip = ["*musllinux*", "*-manylinux_i686", "*-win32"]
build-frontend = "build"
build-verbosity = 1

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
environment = { PATH = "$HOME/.cargo/bin:$PATH" }
before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal --default-toolchain stable"

[tool.cibuildwheel.macos]
archs = ["arm64", "x86_64"]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.6",
]
