[project]
name = "cc-sentiment-server"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "modal",
    "pydantic",
    "httpx",
    "psycopg[binary]",
    "starlette",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
