[project]
name = "cc-sentiment-server"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "modal",
    "pydantic",
    "httpx",
    "psycopg[binary]",
    "psycopg-pool",
    "fastapi[standard]",
    "slowapi",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "testcontainers[postgres]>=4.7",
]

[tool.hatch.build.targets.wheel]
packages = ["cc_sentiment_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
