[package]
name = "transcripts"
version = "0.1.0"
edition = "2021"

[lib]
name = "_transcripts_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py313", "chrono"] }
serde = { version = "1", features = ["derive"] }
sonic-rs = "0.5"
regex = "1"
once_cell = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
rayon = "1.10"
walkdir = "2"
crossbeam-channel = "0.5"
num_cpus = "1"
memchr = "2.7"
rustc-hash = "2"
bytecount = { version = "0.6", features = ["runtime-dispatch-simd"] }
